# scm-graph-rag

./: .gitignore  LICENSE  README.md  agent.py  config.py  main.py  pyproject.toml  tools.py
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  MessageBubble.jsx  ModelSelector.jsx  Sidebar.jsx  SourceGraph.jsx  ThoughtProcess.jsx
notebooks/: 00_setup_postgres.ipynb  01_weaviate_setup.ipynb  02_data_ingestion.ipynb  03_neo4j_ingestion.ipynb  04_agent_build.ipynb  05_retrieval_eval.ipynb
streamlit_app/: app.py
